samples/_failures_safe/1761339441_e45aa2_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_55b41699.c: In function ‘find_min_distance’:
./samples/SAFE/__tmp_55b41699.c:173:26: error: expected ‘;’ at end of input
  173 |             min_index = i
      |                          ^
      |                          ;
./samples/SAFE/__tmp_55b41699.c:173:13: error: expected declaration or statement at end of input
  173 |             min_index = i
      |             ^~~~~~~~~
./samples/SAFE/__tmp_55b41699.c:173:13: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_55b41699.c:173:13: error: expected declaration or statement at end of input
